...
                app:textStartPadding="0dp" />


        </com.google.android.material.chip.ChipGroup>

        <LinearLayout
            android:id="@+id/ratingGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
...
                        android:progressTint="#FFC107"
                        android:layout_weight="1"
                        android:max="100"
                        android:progress="10"/>
                </LinearLayout>
                <TextView
                    android:id="@+id/tvLeaveAComment"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/jakarta_regular"
                    android:textColor="#666666"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textAlignment="textEnd"
                    android:gravity="bottom"
                    android:text="Laisser un avis"
                    tools:text="Laisser un avis" />
            </LinearLayout>

        </LinearLayout>


...
